<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/send_as_email"
        android:title="send as email"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="Cancel"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:title="Next"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />

<item
    android:id="@+id/set_reminder"
    android:title="Set reminder"
    android:visible="true"
    app:showAsAction="never" />
</menu>